Fixes: NB#268598 - text edit not fully visible when focused (and relocated) in a landscape sheet Revby: Adrian Yanes Details: MTextEdit not was not fully visible in landscape orientation in soem situations. 	Small modification to vertical-anchor-position value was done.

--- a/base/meegotouch/libmeegotouchcore/style/mrelocatorstyle.css
+++ b/base/meegotouch/libmeegotouchcore/style/mrelocatorstyle.css
@@ -10,7 +10,7 @@ MRelocatorStyle.Portrait {
 }
 
 MRelocatorStyle.Landscape {
-    vertical-anchor-position: 4mm;
+    vertical-anchor-position: 10mm;
     top-no-go-margin: 4mm;
     bottom-no-go-margin: 4mm;
 }
